Fixed issue with vertical scrollbar

--- a/www/css/simple-sidebar.css
+++ b/www/css/simple-sidebar.css
@@ -25,7 +25,6 @@
     width: 0;
     height: 100%;
     margin-left: -250px;
-    overflow-y: scroll;
     overflow-x: hidden;
     background: #000;
     -webkit-transition: all 0.5s ease;
